objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle A</fullName>
                </value>
                <value>
                    <fullName>Bundle B</fullName>
                </value>
                <value>
                    <fullName>Bundle C</fullName>
                </value>
                <value>
                    <fullName>Bundle D</fullName>
                </value>
                <value>
                    <fullName>Bundle E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr1_Yr2_Display__c</fullName>
        <formula>IF( AND( NOT( ISNULL( APTS_Increase_Yr1_Yr2__c ) ), NOT( ISBLANK( APTS_Increase_Yr1_Yr2__c ))),TEXT(FLOOR(APTS_Increase_Yr1_Yr2__c*100)) &amp;&quot;.&quot;&amp; LPAD(TEXT(((APTS_Increase_Yr1_Yr2__c*100)-FLOOR((APTS_Increase_Yr1_Yr2__c*100)))*100),2,&quot;0&quot;),&apos;N/A&apos;)</formula>
        <label>% Increase Yr1- Yr2 Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr1_Yr2__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field will be populated from LineItem record.</description>
        <label>% Increase Yr1- Yr2</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr2_Yr3_Display__c</fullName>
        <formula>IF( AND( NOT( ISNULL( APTS_Increase_Yr2_Yr3__c ) ), NOT( ISBLANK( APTS_Increase_Yr2_Yr3__c ))),TEXT(FLOOR(APTS_Increase_Yr2_Yr3__c*100)) &amp;&quot;.&quot;&amp; LPAD(TEXT(((APTS_Increase_Yr2_Yr3__c*100)-FLOOR((APTS_Increase_Yr2_Yr3__c*100)))*100),2,&quot;0&quot;),&apos;N/A&apos;)</formula>
        <label>% Increase Yr2- Yr3 Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr2_Yr3__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field is populated from LineItem record.</description>
        <label>% Increase Yr2- Yr3</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr3_Yr4_Display__c</fullName>
        <formula>IF( AND( NOT( ISNULL( APTS_Increase_Yr3_Yr4__c ) ), NOT( ISBLANK( APTS_Increase_Yr3_Yr4__c ))),TEXT(FLOOR(APTS_Increase_Yr3_Yr4__c*100)) &amp;&quot;.&quot;&amp; LPAD(TEXT(((APTS_Increase_Yr3_Yr4__c*100)-FLOOR((APTS_Increase_Yr3_Yr4__c*100)))*100),2,&quot;0&quot;),&apos;N/A&apos;)</formula>
        <label>% Increase Yr3- Yr4 Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr3_Yr4__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field is populated from LineItem record.</description>
        <label>% Increase Yr3- Yr4</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Multi_Tiered_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi Tiered Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Print_TP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Print?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Category_Group__c</fullName>
        <label>Item Category Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Keep_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Lapse_Date__c</fullName>
        <label>Lapse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item_Net_Price__c</fullName>
        <description>This field is used in formula field LCRM_New_ACV_SalesPrice__c. This field contains Net Price of the line item and updated from workflow rule.</description>
        <label>Line Item Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_List_Price_Display__c</fullName>
        <formula>/* IF(  ISBLANK(Apttus_QPConfig__OptionId__c) &amp;&amp;  (  APTS_Product_Family__c  = &apos;WEBSITES&apos; || APTS_Product_Family__c  = &apos;ENGAGEMENT SOLUTIONS&apos;  || APTS_Product_Family__c  = &apos;INTEGRATED MARKETING SOLUTIONS&apos;) ,Apttus_QPConfig__OptionPrice__c , Apttus_QPConfig__ListPrice__c)*/


 IF( APTS_Proposal_Business_Unit__c  = &apos;FindLaw&apos;,  Apttus_QPConfig__ExtendedPrice__c ,  Apttus_QPConfig__ListPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_MLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_MLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Master_Contacts_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Master Contacts Validation field for Line Item</description>
        <label>APTS Master Contacts Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Media_High_Level_Code__c</fullName>
        <label>Media High Level Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Media_High_Level__c</fullName>
        <label>Media High Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Media_Lower_Level_Code__c</fullName>
        <label>APTS_Media_Lower_Level_Code__c</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_PrintProview_APP__c</fullName>
        <formula>IF( (APTS_Media_High_Level_Code__c == &quot;07&quot; ||  APTS_Media_High_Level_Code__c == &quot;21&quot;) &amp;&amp; ( (APTS_Print_Purchase_Options__c == &quot;Ship &amp; Enter Sub APP&quot;  || APTS_Print_Purchase_Options__c ==&quot;Sub Only APP&quot;  ||  APTS_Print_Purchase_Options__c == &quot;Fill-Up &amp; Enter Sub APP&quot;)||  APTS_Purchase_Options__c ==&quot;APP&quot; ||  Purchase_Option_Bundle_Print__c == &quot;Ship &amp; Entitle - APP&quot; || Purchase_Option_Bundle_Print__c == &quot;Sub Only APP&quot;) &amp;&amp;   ISPICKVAL( Apttus_QPConfig__LineStatus__c ,&quot;New&quot;)   &amp;&amp;  ISPICKVAL(APTS_Group__c ,&apos;&apos;)  &amp;&amp;  APTS_Group_Primary_Material__c == &apos;&apos;, APTS_Net_Price_display__c , Null)</formula>
        <label>APTS Net Price PrintProview APP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_PrintProview_No_Sub__c</fullName>
        <description>Updated by Workflow Rule : APTS NetPrice PrintProview NoSub Update</description>
        <label>APTS Net Price PrintProview No Sub</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_display__c</fullName>
        <formula>IF( APTS_Proposal_Business_Unit__c = &quot;FindLaw&quot; &amp;&amp; ISPICKVAL( Apttus_QPConfig__LineType__c , &quot;Option&quot;) &amp;&amp; AND(APTS_Cat_L5__c != &apos;L5_L0222_FP&apos;,APTS_Cat_L5__c != &apos;L5_L0220_FP&apos;,APTS_Cat_L5__c != &apos;L5_L0221_FP&apos;), 0, IF(APTS_Proposal_Business_Unit__c = &quot;Corp OneOTC US&quot;,Apttus_QPConfig__NetPrice__c,IF(APTS_Proposal_Business_Unit__c = &quot;Tax Professional&quot; &amp;&amp; ISPICKVAL( Apttus_QPConfig__BillingFrequency__c , &quot;Monthly&quot;),Apttus_QPConfig__NetUnitPrice__c, Apttus_QPConfig__NetPrice__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price_display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_New_Bridge_Discount__c</fullName>
        <description>This field is created to replace the existing APTS_Bridge_Discount__c(Picklist) field</description>
        <label>Bridge Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_New_Subscriptions_Total__c</fullName>
        <label>New Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Attorneys__c</fullName>
        <label>Number of Attorneys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_One_Time_Old_Version_Flag__c</fullName>
        <description>This field returns true if the Price type is One Time or the Renewal Only/Old Versions is True</description>
        <formula>IF( OR(  TEXT(Apttus_QPConfig__PriceType__c) = &apos;One Time&apos;, APTS_FL_Renewal_Only_Clone__c  = &apos;Yes&apos;) , True, False)</formula>
        <label>One Time/Old Version Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Online_Contacts_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Online contacts validation field on the Line item</description>
        <label>APTS Online Contacts Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Online_Incremental__c</fullName>
        <label>Online Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Material_Number__c</fullName>
        <formula>Apttus_QPConfig__OptionId__r.ProductCode</formula>
        <label>Option Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Name_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(APTS_Option_Name__c) ) ,  CASE(APTS_Option_Name__c, &apos;Exist&apos;, &apos;Existant&apos;, &apos;New&apos;, &apos;Nouveau&apos;,&apos;Renewed&apos;,&apos;Renouvelé&apos;,&apos;Lapsed&apos;,&apos;Expiré&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>Option Name French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Name__c</fullName>
        <formula>Apttus_QPConfig__OptionId__r.Name</formula>
        <label>Option Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Confirmation_Contact__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Order_Confirmation_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Confirmation/Sold-To Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PS_Ancillary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies the Professional Service and Ancillary Corporate Products</description>
        <label>PS/Ancillary Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Partial_Year_Charge_Eligible__c</fullName>
        <label>Partial Year Charge Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payer_SSD__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Payer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Acct SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_People_Map__c</fullName>
        <formula>APTS_Cat_L2__c== &apos;L2_L012_FP&apos; || APTS_Cat_L5__c==&apos;L5_L1341_FP&apos; || APTS_Cat_L5__c ==&apos;L5_L0044_FP&apos; || APTS_Cat_L5__c==&apos;L5_L0045_FP&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>People Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Cap_Adjustment_Percentage__c</fullName>
        <label>Price Cap Adjustment Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Qty_Type__c</fullName>
        <label>Pricing Quantity Type (UoM)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Quantity__c</fullName>
        <label>Pricing Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Uom_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK( TEXT(Apttus_QPConfig__PriceUom__c) ) ) ,  CASE(TEXT(Apttus_QPConfig__PriceUom__c), &apos;Each&apos;, &apos;Chacun&apos;, &apos;&apos;) , &apos;&apos;)</formula>
        <label>Pricing Uom French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Print_Branding__c</fullName>
        <label>Print Branding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Print_Purchase_Options__c</fullName>
        <label>Print Purchase Option</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery__c</fullName>
        <label>Product Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Detail__c</fullName>
        <label>Product Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name_Display__c</fullName>
        <formula>IF (APTS_Media_High_Level_Code__c  = &quot;07&quot; &amp;&amp;
ISPICKVAL (Apttus_QPConfig__LineType__c, &quot;Option&quot; ) , 
Apttus_QPConfig__OptionId__r.Name,
IF (APTS_Media_High_Level_Code__c  = &quot;07&quot; &amp;&amp;
ISPICKVAL (Apttus_QPConfig__LineType__c, &quot;Product/Service&quot;),
Apttus_Proposal__Product__r.Name,null
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name_Override__c</fullName>
        <label>Product Name Override</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Pricing_Model__c</fullName>
        <label>Product Pricing Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Uom_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(TEXT(Apttus_QPConfig__Uom__c)) ) ,  CASE(Apttus_QPConfig__Uom__c, &apos;Seats&apos;, &apos;Sièges&apos;, &apos;Attorneys&apos;, &apos;Avocats&apos;,&apos;Users&apos;,&apos;Utilisateurs&apos;,&apos;Benefitting Group&apos;,&apos;Groupe Bénéficiaire&apos;,&apos;Each&apos;,&apos;Chacun&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>Product Uom French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Variant_ID__c</fullName>
        <label>Product Variant ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Program_ID__c</fullName>
        <label>Program ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Business_Unit__c</fullName>
        <description>Proposal Business Unit</description>
        <label>Proposal Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Prorate_charge__c</fullName>
        <formula>IF(AND((ISPICKVAL(APTS_Term_Type__c, &apos;ProRate&apos;)|| ISPICKVAL(APTS_Term_Type__c, &apos;Co-Term and ProRate&apos;)),DATEVALUE(Apttus_QPConfig__ConfigurationId__r.Apttus_Config2__FinalizedDate__c) &gt;= APTS_Start_Date__c),((Apttus_QPConfig__NetPrice__c /365)*((APTS_End_Date__c - DATEVALUE(Apttus_QPConfig__ConfigurationId__r.Apttus_Config2__FinalizedDate__c))+1)),IF(AND((ISPICKVAL(APTS_Term_Type__c, &apos;ProRate&apos;)|| ISPICKVAL(APTS_Term_Type__c, &apos;Co-Term and ProRate&apos;)),DATEVALUE(Apttus_QPConfig__ConfigurationId__r.Apttus_Config2__FinalizedDate__c) &lt; APTS_Start_Date__c),((Apttus_QPConfig__NetPrice__c /365)*((APTS_End_Date__c - APTS_Start_Date__c)+1)),IF(AND((ISPICKVAL(APTS_Term_Type__c, &apos;Co-Term&apos;)|| ISPICKVAL(APTS_Term_Type__c, &apos;Future Start Date and Co-Term&apos;)),APTS_Proposal_Business_Unit__c = &apos;Tax Professional&apos;,ISPICKVAL( Apttus_QPConfig__LineType__c , &apos;Product/Service&apos;),ISPICKVAL( Apttus_QPConfig__BillingFrequency__c , &apos;Yearly&apos;)),APTS_Calculated_Year_1__c,IF(AND((ISPICKVAL(APTS_Term_Type__c, &apos;Co-Term&apos;)|| ISPICKVAL(APTS_Term_Type__c, &apos;Future Start Date and Co-Term&apos;)),APTS_Proposal_Business_Unit__c = &apos;Tax Professional&apos;,ISPICKVAL( Apttus_QPConfig__LineType__c , &apos;Product/Service&apos;),ISPICKVAL( Apttus_QPConfig__BillingFrequency__c , &apos;Monthly&apos;)),(APTS_Calculated_Year_1__c/Apttus_QPConfig__SellingTerm__c),null))))</formula>
        <label>Prorate charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Purchase_Options__c</fullName>
        <label>ProView Purchase Option</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Description__c</fullName>
        <description>DOC-7195 (Version / Non Version Product)</description>
        <label>Renewal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Effective_Date_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(APTS_Renewal_Effective_Date__c) ) , IF(LEN( TEXT(DAY(APTS_Renewal_Effective_Date__c)) )&gt;1 ,		TEXT(DAY(APTS_Renewal_Effective_Date__c)) , &quot;0&quot; + TEXT(DAY(APTS_Renewal_Effective_Date__c)) ) + &quot;-&quot; + IF( LEN( TEXT(MONTH(APTS_Renewal_Effective_Date__c)) )&gt;1 , TEXT(MONTH(APTS_Renewal_Effective_Date__c)) , &quot;0&quot; + TEXT(MONTH(APTS_Renewal_Effective_Date__c)) ) +&quot;-&quot; + TEXT( YEAR(APTS_Renewal_Effective_Date__c) ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Effective Date Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Effective_Date__c</fullName>
        <description>API which will calculate Renewal Effective Date as Asset End Date + 1 at proposal line item level.</description>
        <inlineHelpText>API which will calculate Renewal Effective Date as Asset End Date + 1 at proposal line item level.</inlineHelpText>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Material_Number__c</fullName>
        <description>DOC-7195 (Version / Non Version Product)</description>
        <label>Renewal Material Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Renew</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Term Commitment</fullName>
                </value>
                <value>
                    <fullName>Non-Renewable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Number__c</fullName>
        <label>SAP Deal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Primary_Material__c</fullName>
        <label>SAP Deal Primary Material</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Type__c</fullName>
        <label>SAP Deal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_MLA_Agreement_Number__c</fullName>
        <label>SAP MLA Agreement Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_Bill_To__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_SSD_bill_to__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Acct SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_Sold_To__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_SSD_Sold_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Acct SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_ship_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as part of OC-GLI implementation, a look up to Account SSD</description>
        <label>Ship To Acct SSD</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Number_Override__c</fullName>
        <label>Service Number Override</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Number__c</fullName>
        <label>Service Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(APTS_Start_Date__c) ) , 
IF( LEN( TEXT(DAY(APTS_Start_Date__c)) )&gt;1 , TEXT(DAY(APTS_Start_Date__c)) , &quot;0&quot; + TEXT(DAY(APTS_Start_Date__c)) ) + &quot;-&quot; + 
CASE(TEXT(MONTH(APTS_Start_Date__c)),
&apos;1&apos;,&apos;Jan&apos;,
&apos;2&apos;,&apos;Feb&apos;,
&apos;3&apos;,&apos;Mar&apos;,
&apos;4&apos;,&apos;Apr&apos;,
&apos;5&apos;,&apos;May&apos;,
&apos;6&apos;,&apos;Jun&apos;,
&apos;7&apos;,&apos;Jul&apos;,
&apos;8&apos;,&apos;Aug&apos;,
&apos;9&apos;,&apos;Sep&apos;,
&apos;10&apos;,&apos;Oct&apos;,
&apos;11&apos;,&apos;Nov&apos;,
&apos;12&apos;,&apos;Dec&apos;,
&apos;&apos;) +&quot;-&quot; +  
TEXT( YEAR(APTS_Start_Date__c) ),&apos;&apos;)</formula>
        <label>Start Date Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Subscription_Number_Override__c</fullName>
        <label>Subscription Number Override</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Term_Type__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-Term</fullName>
                </value>
                <value>
                    <fullName>ProRate</fullName>
                </value>
                <value>
                    <fullName>Co-Term and ProRate</fullName>
                </value>
                <value>
                    <fullName>Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Future Start Date and Co-Term</fullName>
                </value>
                <value>
                    <fullName>Future Start Date</fullName>
                </value>
                <value>
                    <fullName>Delivery Date and Co-Term</fullName>
                    <isActive>false</isActive>
                    <label>Delivery Date and Co-Term</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Total_Number_of_Points__c</fullName>
        <label>Total Number of Points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Print_ProView_ShipCharge_Flag__c</fullName>
        <description>This field checks the criteria for the Total Print ProView Ship Charge Rollup Summary field</description>
        <formula>OR(
IF(
AND(
OR( APTS_Media_High_Level_Code__c = &apos;07&apos;, APTS_Media_High_Level_Code__c = &apos;21&apos;) ,
TEXT(Apttus_QPConfig__ChargeType__c) = &apos;Subscription Fee&apos;,
TEXT(Apttus_QPConfig__SellingFrequency__c) = &apos;One Time&apos;) , True, False) ,
IF( AND( APTS_Media_High_Level_Code__c = &apos;02&apos;,
APTS_Proposal_Business_Unit__c = &apos;Canada&apos;,
TEXT(Apttus_QPConfig__ChargeType__c) = &apos;Subscription Fee&apos;,
TEXT(Apttus_QPConfig__SellingFrequency__c) = &apos;One Time&apos;) , True, False),
IF(Purchase_Option_Bundle_Print__c = &apos;Ship &amp; Entitle Sub&apos;, True, False),
IF (AND
(TEXT(Apttus_QPConfig__ChargeType__c) = &apos;Standard Price&apos; ,
OR (APTS_Print_Purchase_Options__c = &apos;Ship &amp; Enter Sub&apos;,APTS_Print_Purchase_Options__c = &apos;Sub Only&apos;,
APTS_Purchase_Options__c = &apos;Entitle and Charge&apos;, APTS_Purchase_Options__c = &apos;Sub Only&apos;,
Purchase_Option_Bundle_Print__c= &apos;Ship &amp; Entitle Sub&apos;, Purchase_Option_Bundle_Print__c= &apos;Sub Only&apos;)),
True , False))</formula>
        <label>Total Print ProView Ship Charge Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_WLEC_Product_Category__c</fullName>
        <label>WPD Product Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_3_Charges__c</fullName>
        <formula>/*IF( APTS_Year_2_3_Price__c  &gt;=  Apttus_QPConfig__NetPrice__c , Apttus_QPConfig__NetPrice__c, APTS_Year_2_3_Price__c )*/

IF( APTS_Product_Name__c = &apos;FINDLAW EXPOSURE PACK&apos;, Apttus_QPConfig__NetPrice__c,IF( APTS_Year_2_3_Price__c &gt;= Apttus_QPConfig__NetPrice__c , Apttus_QPConfig__NetPrice__c, APTS_Year_2_3_Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2&amp;3 Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_3_Price__c</fullName>
        <label>Year 2-3 Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_Adjustment__c</fullName>
        <label>YOY % Yr 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Year_2_Adjustmentdisplay__c</fullName>
        <formula>IF(AND(APTS_Contract_Term_Number__c &lt; 12,OR(TEXT(APTS_Years_2_Plus_Adjustment__c)!=null,TEXT(APTS_Years_2_Plus_Adjustment__c)==null)),&apos;&apos;,
   IF(AND(APTS_Contract_Term_Number__c &gt; 12,TEXT(APTS_Years_2_Plus_Adjustment__c)!=null),TEXT(APTS_Years_2_Plus_Adjustment__c)&amp;&quot;%&quot;,
   IF(AND(APTS_Contract_Term_Number__c = 12,OR(TEXT(APTS_Years_2_Plus_Adjustment__c)!=null,TEXT(APTS_Years_2_Plus_Adjustment__c)==null)),&apos;N/A&apos;,
    IF(AND(APTS_Contract_Term_Number__c &gt; 12,TEXT(APTS_Years_2_Plus_Adjustment__c)== null),&apos;N/A&apos;,&apos;N/A&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY % Yr 2 Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Yearly_Total__c</fullName>
        <label>Yearly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Years_2_3_Charges_Disc_Surc__c</fullName>
        <description>From Line item field</description>
        <label>Years 2-3 Disc/Surc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Years_2_Plus_Adjustment__c</fullName>
        <label>YoY 2+ %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>